# beaker-fire

./: .gitattributes  .gitignore  Dockerfile  LICENSE.txt  README.md  archytas-1.3.14b1-py3-none-any.whl  beaker_kernel-1.9.2b1-py3-none-any.whl  docker-compose.yaml  env.sample  pyproject.toml
src/beaker_fire/: __about__.py  __init__.py  agent.py  app.py  context.py
src/beaker_fire/data/census/: ACSDP5Y2023.DP05-Column-Metadata.csv  ACSDP5Y2023.DP05-Data.csv  ACSDP5Y2023.DP05-Table-Notes.txt
src/beaker_fire/data/fire23_1.gdb/: a00000001.TablesByName.atx  a00000001.freelist  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000003.gdbtablx  a0000007e.CatItemsByPhysicalName.atx  a0000007e.CatItemsByType.atx  a0000007e.FDO_UUID.atx  a0000007e.freelist  a0000007e.gdbtable  a0000007e.gdbtablx  a0000007e.spx  a0000007f.CatItemTypesByName.atx  a0000007f.CatItemTypesByParentTypeID.atx  a0000007f.CatItemTypesByUUID.atx  a0000007f.gdbtable  a0000007f.gdbtablx  a00000080.CatRelsByDestinationID.atx  a00000080.CatRelsByOriginID.atx  a00000080.CatRelsByType.atx  a00000080.FDO_UUID.atx  a00000080.freelist  a00000080.gdbtable  a00000080.gdbtablx  a00000081.CatRelTypesByBackwardLabel.atx  a00000081.CatRelTypesByDestItemTypeID.atx  a00000081.CatRelTypesByForwardLabel.atx  a00000081.CatRelTypesByName.atx  a00000081.CatRelTypesByOriginItemTypeID.atx  a00000081.CatRelTypesByUUID.atx  a00000081.gdbtable  a00000081.gdbtablx  a000000bf.freelist  a000000bf.gdbtable  a000000bf.gdbtablx  a000000bf.horizon  a000000bf.spx  a000000c0.freelist  a000000c0.gdbtable  (+3 more)
src/beaker_fire/data/structures/: STRUCT_California_State_Shape.xml
src/beaker_fire/data/worldpop/: socal_population_2020.tif  socal_population_2020_5km.tif
src/beaker_fire/procedures/python3/: list_current_dir.py  setup.py
src/beaker_fire/prompts/: agent.md  all_fires.md  census.md  instructions.md  recent_fires.md  structures.md  world_pop.md
src/beaker_minerals/: agent.py  app.py  context.py
src/beaker_minerals/data/: HS_Commodity_Codes.csv  Ukraine_ACLED.csv  combined_commodities_data_latest.csv  critical_mineral_mines.csv  port_locations.csv
src/beaker_minerals/data/Mineral_Industry_Trends_And_Statistics_MCS_2025/: MCS2025_Fig10_Price_Growth_Rates.csv  MCS2025_Fig11_Pch_Consump_2023_2024.csv  MCS2025_Fig12_Pch_Consump_2020_2024.csv  MCS2025_Fig13_Scrap.csv  MCS2025_Fig1_Minerals_in_Economy.csv  MCS2025_Fig2_Net_Import_Reliance.csv  MCS2025_Fig4_Value_by_Type.csv  MCS2025_Mineral_Industry_Trends_and_Salient_Statistics.xml  MCS2025_T1_Mineral_Industry_Trends.csv  MCS2025_T2_Mineral_Economic_Trends.csv  MCS2025_T3_State_Value_Rank.csv  MCS2025_T4_Critical_Minerals_End_Use.csv  MCS2025_T5_Critical_Minerals_Salient.csv
src/beaker_minerals/data/Salient_Commodity_Data_Release_Grouped/: mcs2025-abras_salient.csv  mcs2025-alumi_salient.csv  mcs2025-antim_salient.csv  mcs2025-arsen_salient.csv  mcs2025-asbes_salient.csv  mcs2025-barit_salient.csv  mcs2025-bauxi_salient.csv  mcs2025-beryl_salient.csv  mcs2025-bismu_salient.csv  mcs2025-boron_salient.csv  mcs2025-bromi_salient.csv  mcs2025-cadmi_salient.csv  mcs2025-cemen_salient.csv  mcs2025-chrom_salient.csv  mcs2025-clays_salient.csv  mcs2025-cobal_salient.csv  mcs2025-coppe_salient.csv  mcs2025-diamo_salient.csv  mcs2025-diato_salient.csv  mcs2025-felds_salient.csv  mcs2025-feore_salient.csv  mcs2025-fepig_salient.csv  mcs2025-fescr_salient.csv  mcs2025-fesla_salient.csv  mcs2025-feste_salient.csv  mcs2025-fluor_salient.csv  mcs2025-galli_salient.csv  mcs2025-garne_salient.csv  mcs2025-gemst_salient.csv  mcs2025-germa_salient.csv  mcs2025-gold_salient.csv  mcs2025-graph_salient.csv  mcs2025-gypsu_salient.csv  (+52 more)
src/beaker_minerals/prompts/: acled.md  acled_file_based.md  agent.md  comtrade.md  data.md  instructions.md  mrds.md  ports_mines.md
(+69 files in other folders)
