[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-minerals"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Brandon Rose", email = "rose.brandon.m@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker_kernel~=1.9.0",
  "folium~=0.19.4",
  "seaborn~=0.13.2",
  "plotly~=6.0.0", 
  "matplotlib~=3.10.0",
]

[project.urls]
Documentation = "https://github.com/Brandon Rose/beaker-minerals#readme"
Issues = "https://github.com/Brandon Rose/beaker-minerals/issues"
Source = "https://github.com/Brandon Rose/beaker-minerals"

[tool.hatch.version]
path = "src/beaker_minerals/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaker_minerals tests}"

[tool.coverage.run]
source_pkgs = ["beaker_minerals", "tests"]
branch = true
parallel = true
omit = [
  "src/beaker_minerals/__about__.py",
]

[tool.coverage.paths]
beaker_minerals = ["src/beaker_minerals", "*/beaker-minerals/src/beaker_minerals"]
tests = ["tests", "*/beaker-minerals/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.build.hooks.beaker]
require-runtime-dependencies = true

