[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-fire"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Brandon Rose", email = "brandon@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker_kernel~=1.9.0",
  "folium~=0.19.4",
  "seaborn~=0.13.2",
  "plotly~=6.0.0", 
  "matplotlib~=3.10.0",
  "datashader~=0.17.0",
  "fiona~=1.10.0",
  "holoviews",
  "geoviews",
  "cartopy",
  "geopandas",
  "spatialpandas",
  "bokeh",
]

[project.urls]
Documentation = "https://github.com/Brandon Rose/beaker-fire#readme"
Issues = "https://github.com/Brandon Rose/beaker-fire/issues"
Source = "https://github.com/Brandon Rose/beaker-fire"

[tool.hatch.version]
path = "src/beaker_fire/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaker_fire tests}"

[tool.coverage.run]
source_pkgs = ["beaker_fire", "tests"]
branch = true
parallel = true
omit = [
  "src/beaker_fire/__about__.py",
]

[tool.coverage.paths]
beaker_fire = ["src/beaker_fire", "*/beaker-fire/src/beaker_fire"]
tests = ["tests", "*/beaker-fire/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.build.hooks.beaker]
require-runtime-dependencies = true

